# ChatbotChaytau

./: .gitignore  build_desktop.ps1  pyproject.toml  requirements.txt
app/: __init__.py  main.py  pyproject.toml  requirements.txt
app/api/: chat.py
app/client/: __init__.py  app.py  backend_launcher.py  main.py
app/client/api/: client.py
app/client/models/: __init__.py  dto.py
app/client/state/: store.py
app/client/ui/: main_window.py  settings_dialog.py
app/client/utils/: __init__.py  resources.py
app/client/workers/: stream_worker.py
app/dependencies/: database.py  gemini_client.py
app/models/: __init__.py  conversation.py  file.py  message.py
app/schemas/: chat.py  message.py
app/server/: configs.py  logger.py
app/server/dependencies/: database.py  gemini_client.py
app/server/models/: cache.py  conversation.py
app/server/routers/: chat.py  conversation.py
app/server/schemas/: chat.py  conversation.py  message.py
app/server/services/: chat.py  conversation.py
app/server/utils/: cache.py  file_utils.py
app/services/: chat.py
app/utils/: file_utils.py
backend/: .gitignore
backend/app/: configs.py  main.py
backend/app/dependencies/: database.py  gemini_client.py
backend/app/models/: __init__.py
backend/app/routers/: chat.py  conversation.py
backend/app/schemas/: conversation.py
backend/app/services/: chat.py  conversation.py
backend/app/utils/: cache.py  file_utils.py
desktop/ChatbotChaytauDesktop/: ChatbotChaytauDesktop.slnx
desktop/ChatbotChaytauDesktop/ChatbotChaytauDesktop/: ChatbotChaytauForm.Designer.cs  (+4 more)
